--- a/mod2 solution/index.html
+++ b/mod2 solution/index.html
@@ -11,11 +11,11 @@
 
 	<div class="row">
 
-		<div class="col-lg-4 col-md-6"><p>You must implement the following breakpoints that will be considered desktop, tablet, and mobile. The browser should display a desktop version of the site when the width of the browser window is 992px and above. Tablet view should appear only if the width of the browser window is between 768px and 991px, inclusively. Mobile view should appear only if the width of the browser is equal to or less than 767px.</p></div>
+		<div class="col-lg-4 col-md-6"><p>You must implement the following breakpoints that will be considered desktop, tablet, and mobile. The browser should display a desktop version of the site when the width of the browser window is 992px and above.</p></div>
 
-		<div class="col-lg-4 col-md-6"><p>Your site is very simple. It consists of a page heading and 3 sections (all in one row in the desktop view). Each section contains some text. You can make it dummy text/"lorem ipsum", it doesn't matter. How the sections are laid out on the screen depends on the width of the browser window. (Hint: use media queries discussed in Lecture 23.)</p></div>
+		<div class="col-lg-4 col-md-6"><p>Your site is very simple. It consists of a page heading and 3 sections (all in one row in the desktop view). Each section contains some text. You can make it dummy text/"lorem ipsum", it doesn't matter. </p></div>
 
-		<div class="col-lg-4 col-md-6"><p>Layout: In the desktop view (992px and above), each of the 3 sections should take up equal amount of space on the screen. As you make the browser window wider or narrower, each section should become wider or narrower. (Hint: use percentages to define width and use the 'float' property. See Lecture 24). For a visual reference of this view, see the desktop mockup illustration below.</p></div>
+		<div class="col-lg-4 col-md-12" ><p style="width: 95%">Layout: In the desktop view (992px and above), each of the 3 sections should take up equal amount of space on the screen. As you make the browser window wider or narrower, each section should become wider or narrower. </p></div>
 
 	</div>
 </body>
